# dsc10_tutor_agent

./: .gitignore  Makefile  main.py  pyproject.toml
example-notebooks/hw1/: hw1.ipynb
example-notebooks/hw1/data/: Les_Trois_Mousquetaires.txt  The_Three_Musketeers.txt  disney_movies.csv
example-notebooks/hw1/tests/: q1_1.py  q1_2.py  q1_3.py  q1_4.py  q1_5.py  q2_1.py  q2_2.py  q3_1.py  q3_2.py  q3_3.py  q4_1.py  q4_2.py  q4_3.py  q5_1.py  q5_4.py  q5_5.py  q5_7.py  q6_1.py  q6_2.py  q6_3.py  q6_4.py  q6_5.py  q6_6.py  q7_1.py  q7_2.py  q7_3.py  q7_4.py  q7_5.py  q7_6.py  q7_7.py  q7_8.py
example-notebooks/hw2/: hw2.ipynb
example-notebooks/hw2/data/: pokedex.csv
example-notebooks/hw2/tests/: q1_1.py  q1_2.py  q1_3.py  q1_4.py  q1_5.py  q1_6.py  q1_7.py  q1_8.py  q2_1.py  q2_2.py  q2_3.py  q2_5.py  q2_7.py  q3_1.py  q3_2.py  q3_3.py  q3_4.py  q3_5.py  q3_6.py  q3_8.py  q3_9.py  q4_1.py  q4_2.py  q4_3.py
example-notebooks/lab0/: lab0.ipynb
example-notebooks/lab0/tests/: q3_2_1.py  q3_2_2.py  q4_2_1.py  q4_3_1.py  q5_3_1.py  q8.py
example-notebooks/lab1/: lab1.ipynb
example-notebooks/lab1/tests/: q1_3_5.py
example-notebooks/lab2/: lab2.ipynb
example-notebooks/lab2/data/: spotify_streams.csv
example-notebooks/lab2/tests/: q1_1.py  q1_2.py  q1_3.py  q1_4.py  q2_1_1.py  q2_1_2.py  q2_2.py  q2_3.py  q2_4.py  q3_1.py  q3_2.py  q3_3.py  q3_4.py  q4_1.py  q4_2.py
src/dsc10_tutor_agent/: __init__.py
